# acmOS-riscv

./: .gdbinit  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  gradelib.py  judge.py
include/: buddy.h  defs.h  elf.h  list.h  memlayout.h  mm.h  pagetable.h  process.h  riscv.h  string.h  syscall.h  uart.h
kernel/: CMakeLists.txt  binary_include.S  kernel.ld  main.c
kernel/asm/: CMakeLists.txt  boot.S
kernel/boot/: CMakeLists.txt  kernelvec.S  start.c
kernel/common/: CMakeLists.txt  answer_locks.h  lock.c  lock.h  printk.c  printk.h  string.c  uart.c
kernel/memory/: CMakeLists.txt  answer_buddy.h  answer_mm.h  answer_pgt.h  mm.c  mm.h  pagetable.c  pagetable.h
kernel/process/: CMakeLists.txt  elf.c  process.c  process.h  tramp.S  trap.c
scripts/: build.sh  docker_build.sh  local_sync.sh  remote_sync.sh
user/: Makefile  answer_printk.h  putc  putc.c  stdlib.h
